--- a/Microbit.html
+++ b/Microbit.html
@@ -124,7 +124,7 @@
         <p><br></p>
         <p>2.关于microbit外接硬件端口管理</p>
         <p>各个外接硬件所对应的端口如下所示</p>
-        <p>:①按钮：P2<br>②旋钮：P1<br>③灯亮：P0<br>④双LED灯：P15、P16</p>
+        <p>①按钮：P2<br>②旋钮：P1<br>③灯亮：P0<br>④双LED灯：P15、P16</p>
         <p><br></p>
 
     </section>
@@ -139,7 +139,7 @@
     <section id="contact">
         <h2>联系我们</h2>
         <p>您可以通过以下方式联系到我们。</p>
-        <p>邮箱:3343324745@qq.com</p>.
+        <p>邮箱:3343324745@qq.com</p>
         <p>微信:strive3343324745</p>
         <p><br></p>
 
